--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 				"nunjucks-markdown": "^2.0.1",
 				"rimraf": "^2.6.1",
 				"run-sequence": "^1.1.5",
+				"smooth-scroll": "^12.1.4",
 				"through2": "^2.0.0",
 				"vinyl-buffer": "^1.0.0",
 				"vinyl-source-stream": "^1.1.0",
